chore: ensure checkboxes maintain vertical alignment

--- a/polaris-react/src/components/IndexTable/components/Checkbox/Checkbox.scss
+++ b/polaris-react/src/components/IndexTable/components/Checkbox/Checkbox.scss
@@ -16,7 +16,7 @@ $condensed-width: 50px;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   display: flex;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  justify-content: center;
+  justify-content: flex-start;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   align-items: center;
 }
